--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
-name = "rbxmapbuilder"
-version = "0.0.0"
-description = "A Tauri App"
-authors = ["you"]
+name = "mapbuilder"
+version = "2.0.0"
+description = "Map Building Tool"
+authors = ["Juan"]
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
@@ -18,3 +18,7 @@ serde_json = "1"
 [features]
 # This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
 custom-protocol = ["tauri/custom-protocol"]
+
+[[bin]]
+name = "mapbuilder"
+path = "src-tauri/src/main.rs"
