--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,10 +22,13 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
+      - name: Clear npm cache
+        run: npm cache clean --force
+
       - name: setup node
         uses: actions/setup-node@v4
         with:
-          node-version: '20' 
+          node-version: '20.12.2'
 
       - name: install Rust stable
         uses: dtolnay/rust-toolchain@stable
